# MemEdit

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  tiny.yaml
data/: README.md  sample_dialogue.json  sample_edits.json
examples/: quickstart.py
memedit/: __init__.py
memedit/attribution/: __init__.py  integrated_gradients.py
memedit/core/: __init__.py  config.py  editor.py  key_buffer.py
memedit/data/: __init__.py  trace.py
memedit/models/: __init__.py  mlp_memory.py
memedit/mome/: __init__.py  gate.py  shard_manager.py
memedit/operations/: __init__.py  delete.py  insert.py  modify.py  query.py  selector.py
memedit/utils/: __init__.py  config_loader.py  linalg.py  logging_utils.py
scripts/: README.md  evaluate_edits.py  pretrain_memory.py  replay_dialogue.py  run_crud_demo.py  stress_edit.py
tests/: conftest.py  test_attribution.py  test_config_loader.py  test_editor.py  test_key_buffer.py  test_linalg.py  test_mlp_memory.py  test_mome.py  test_operations.py  test_selector.py
