[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memedit"
version = "0.1.0"
description = "Fine-Grained Memory Surgery for Expandable Parametric Agent Memory"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anonymous" }]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.23",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "dataclasses-json>=0.6",
]

[project.optional-dependencies]
llm = [
    "transformers>=4.40",
    "accelerate>=0.28",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["memedit*"]

[tool.ruff]
line-length = 100
target-version = "py39"
